# spinifex_gnss_refactored

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
data/: data_gnss_pos.txt
docs/: TEST_README.md  TEST_SUITE_ANALYSIS.md
spinifex_gnss/: __init__.py  config.py  download_gnss.py  gnss_tec.py  parse_gnss.py  parse_rinex.py  parse_rinex_enhanced.py  parse_sp3.py  proces_gnss_data.py  proces_gnss_data.py_old  tec_core.py
spinifex_gnss.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: DATA_README.md  TEST_FILES_WITH_DATA.md  conftest.py  test_config.py  test_gnss_stations.py  test_integrated_suite.py  test_integration_real_data.py  test_parse_gnss.py  test_proces_gnss_data.py  test_tec_core.py  test_time_averaging.py  validate_sp3_real_data.py
